# cris

./: .cproject  .project  AndroidManifest.xml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  OlloExample.cpp  configExample.cpp  iCleboExample.cpp
include/: CGenericRobot.h  CGenericSensor.h  CUnicycleRobot.h  cris.h
jni/: Android.mk  Application.mk  com_isans_cris_CRISAndroid.h  iClebo.cpp  iClebo.h
jni/include/: CGenericRobot.h  CGenericSensor.h  CIK.h  CMath.h  CPoses.h  CUnicycleRobot.h  macros.h
modules/: CMakeLists.txt  Ollo.cpp  Ollo.h  iClebo.cpp  iClebo.h
res/layout/: activity_main.xml
res/values/: strings.xml
src/: CConfigFile.cpp  CConfigFile.h  CConfigFileBase.cpp  CConfigFileBase.h  CIK.h  CPoses.h  CUncopiable.h  SimpleIni.h  format.cpp  link.h
src/com/isans/cris/: CRISAndroid.java  MainActivity.java  RequestQueue.java
